Fixed styling of the 3 insurances because they weren't rendered correctly on mobile devices

--- a/App/src/pages/home/home.scss
+++ b/App/src/pages/home/home.scss
@@ -32,7 +32,7 @@ padding-right: 26px;
 }
 
 .insuranceType{
-  font-size:28px;
+  font-size:19px;
   margin: 16px;
   float:left;
 }
@@ -116,7 +116,7 @@ h6 {
 
 .btnOptions{
   width:70%;
-  padding: 16px 0px 0px 0px;
+  //padding: 16px 0px 0px 0px;
   margin-left: 15%;
   margin-right: 15%;
   background-color: rgba(35, 35, 35, 0.23137254901960785);
